--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	
 	<head>
 	    <title>Hello, Jm's HTML Template</title>
-		<link rel="stylesheet" href="assets/css/main.css" type="text/css" />
+		<link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
 		<script src='javascripts/Synthmain.js'></script>
 		<script src='javascripts/SynthView.js'></script>
 	</head>
