--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 		</footer>
 		<script src="javascripts/adapter.js"></script>
 		<script src="javascripts/recorderjs/recorder.js"></script>
+		<script src='javascripts/recording.js'></script>
 		<script src="javascripts/main.js"></script>
 	</body>
 </html>
