--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<img id='pause' src='images/pause.png' onclick='Pause(this);'/>
 					<img id='record' src='images/recordOn.png'>
 					<img id='mute' src='images/muteoff.png' onclick='Mute(this);'>
+					<input type='checkbox'>
 				</aside>
 				<canvas ondrop='dropping(event)' ondragover='allowDrop(event)' draggable='true'></canvas>
 			</div>
