--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<input type='button' value='All Record'>
 			<input type='button' value='Selector'>
 			<img id='addTrack' src='images/add.png' onclick='AddTrack(this);'>
-			<select id='device'></select>
+			<select id='device' hidden='true'></select>
 		</nav>			
 		<section>
 			<div id='track1' class='track'>
