--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<h2>Track1</h2>
 					<img id='play' class='NoPlaying' src='images/play.png'  onclick='Play(this);'/>
 					<img id='pause' src='images/pause.png' onclick='Pause(this);'/>
-					<img id='record' src='images/recordOn.png'>
+					<img id='record' src='images/recordOff.png' onclick='toggleRecording(this);'>
 					<img id='mute' src='images/muteoff.png' onclick='Mute(this);'>
 					<input type='checkbox' class='checkbox' onclick='DeviceSelect(this);'>
 				</aside>
