--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 					<img id='pause' src='images/pause.png' onclick='Pause(this);'/>
 					<img id='record' src='images/recordOff.png' onclick='toggleRecording(this);'>
 					<img id='mute' src='images/muteoff.png' onclick='Mute(this);'>
+					<a id='down'></a>
 					<input type='checkbox' class='checkbox' onclick='DeviceSelect(this);'>
 				</aside>
 				<canvas ondrop='dropping(event)' ondragover='allowDrop(event)' draggable='true'></canvas>
