--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 <html>
 	
 	<head>
-	    <title>Hello, Jm's HTML Template</title>
+	   	<title>Hello, Jm's HTML Template</title>
 		<link rel="stylesheet" href="stylesheets/main.css" type="text/css" />
 		<script src='javascripts/Synthmain.js'></script>
 		<script src='javascripts/SynthView.js'></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
